Fix dark mode issue

--- a/public/app/index.css
+++ b/public/app/index.css
@@ -1104,7 +1104,6 @@ footer {
     outline: none;
     transition: border-color .5s;
     appearance: none;
-    background-color: var(--bg-color);
     -webkit-appearance: none;
 }
 
